# cmaketut

./: CMakeLists.txt  main.cpp
